package model.metrics;

public class ClassMetrics {

}
