package model.metrics;

public class StatisticalData {

}
