package model.structural;

public class MethodCall {

}
